--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "ejs": "^2.7.1",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
-    "mongoose": "^5.7.3"
+    "mongoose": "^5.7.3",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   }
 }
