--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-session": "^1.16.2",
     "mongoose": "^5.7.3",
     "passport": "^0.4.0",
+    "passport-facebook": "^3.0.0",
     "passport-local": "^1.0.0"
   }
 }
