--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "ejs": "^2.7.1",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
-    "mongoose": "^5.7.3",
+    "mongoose": "^5.7.6",
     "passport": "^0.4.0",
     "passport-facebook": "^3.0.0",
+    "passport-google-oauth": "^2.0.0",
     "passport-local": "^1.0.0"
   }
 }
